--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,13 +5,67 @@ spring:
     #.env: 파일명
     import: optional:file:.env
   datasource:
-    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    driver-class-name: ${DEFAULT.DB_DRIVE_CLASS_NAME}
     url: ${DEFAULT.DB_URL} #.env 파일의 변수사용 ${변수명}
     username: ${DEFAULT.DB_USERNAME}
     password: ${DEFAULT.DB_PASSWORD}
   jackson:
     deserialization:
       fail-on-unknown-properties: false
+    default-property-inclusion: non_null
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true #JPA 만든 쿼리문 로그에 출력해줘
+    properties:
+      hibernate:
+        format_sql: true #로그 찍을 때 보기 편하게 포맷팅해서 출력해줘
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${SOCIAL.GOOGLE.CLIENT_ID}
+            client-secret: ${SOCIAL.GOOGLE.SECRET}
+            scope:
+              - email
+              - profile
+          kakao:
+            client-id: ${SOCIAL.KAKAO.CLIENT_ID}
+            client-secret: ${SOCIAL.KAKAO.SECRET}
+            client-authentication-method: client_secret_post #쿼리스트링 client-id, client-secret 날아간다.
+            authorization-grant-type: authorization_code #권한부여 유형 (인가코드 > access-token를 받는 방식을 선택)
+            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+            # redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            scope:
+              - profile_nickname
+              - profile_image
+            client-name: Kakao
+          naver:
+            client-id: ${SOCIAL.NAVER.CLIENT_ID}
+            client-secret: ${SOCIAL.NAVER.SECRET}
+            client-authentication-method: client_secret_post #쿼리스트링 client-id, client-secret 날아간다.
+            authorization-grant-type: authorization_code #권한부여 유형 (인가코드 > access-token를 받는 방식을 선택)
+            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+            # redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            scope:
+              - name
+              - email
+              - profile_image
+            client-name: Naver
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-info-authentication-method: header #사용자 정보를 가져올 때 토큰을 보내는 방법, 속성값(header, form, query), header가 기본값
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize #소셜 로그인 버튼을 눌렀을 때 이동할 URL
+            token-uri: https://nid.naver.com/oauth2.0/token #사용자 서비스 서버가 Redirect URI로 전달받은 (인가 코드)로 (액세스 토큰)을 요청하는 URI
+            user-info-uri: https://openapi.naver.com/v1/nid/me #서비스 서버가 발급받은 액세스 토큰으로 사용자 정보를 가져오는 URI 입니다.
+            user-name-attribute: response
 
   servlet:
     multipart:
@@ -51,10 +105,45 @@ app:
 
     #AT - 만료시간(ms) - 30분
     #access-token-expiry: 1_800_000
-    access-token-expiry: 30_000
+    # access-token-expiry: 30_000 #30초
+    access-token-expiry: 600_000 #10분
+    #access-token-expiry: 20_000 #20초
 
     #RT - 만료시간(ms) - 15일
+    refresh-token-cookie-name: refresh-token
     refresh-token-expiry: 1_296_000_000
+  oauth2:
+    base-uri: /oauth2/authorization
+    authorization-request-cookie-name: oauth2_auth_request
+    redirect-uri-param-cookie-name: redirect_uri
+    cookie-expiry-seconds: 180
+    authorized-redirect-uris: #OAuth2 처리시 허용한 FE리다이렉트 주소값
+      - http://localhost:3000/oauth/redirect
+      - http://localhost:8080/oauth/redirect
+      - http://192.168.0.144:5125/oauth/redirect #내부 도커서버 IP
+      - http://112.222.157.156:5125/oauth/redirect #외부 IP
+
+management:
+  endpoint: #엔드포인트 (URL)
+    health:
+      show-details: always #/actuator/health의 디테일한 정보를 표시
+    shutdown:
+      enabled: true
+
+  endpoints: #전체 엔드포인트 세팅
+    web:
+      exposure:
+        include: "*" #actuator의 모든 엔드포인트를 웹에 노출
+  info: #엔드포인트이지만 endpoint아래에 있지 않고, management아래에 위치
+    java:
+      enabled: true
+    os:
+      enabled: true
+    env:
+      enabled: true
+
+  server:
+    port: 8080
 
 ---
 
@@ -67,8 +156,6 @@ spring:
   sql:
     init:
       mode: always
-
-
 
 ---
 
